@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 09-04-2005 added: directory tokens which reference XBMC's special directories for use as bookmark paths: $HOME, $SUBTITLES, $THUMBNAILS, $SHORTCUTS, $ALBUMS, $RECORDINGS, $SCREENSHOTS, $PLAYLISTS
+  - 09-04-2005 fixed: music database cleanup with LARGE song table (SF bug 1172234)
   - 09-04-2005 added: support for pausing and rebuffering completly before continuing playback when running out of data
   - 09-04-2005 added: support for using a skinned progress control in fullscreen video to display current position.
   - 08-04-2005 changed: <visible> tag in image controls is now a boolean conditional.  eg <visible>Player.HasMedia</visible> will cause the image to be rendered only if the player has something playing (or paused). 
